# organicmaps

./: .gitmodules  CMakeLists.txt
3party/: CMakeLists.txt
android/sdk/src/main/cpp/app/organicmaps/sdk/: Framework.cpp
data/: classificator.txt  colors.txt  drules_proto.txt  drules_proto_default_dark.txt  drules_proto_default_light.txt  drules_proto_outdoors_dark.txt  drules_proto_outdoors_light.txt  mapcss-mapping.csv  types.txt  visibility.txt
data/styles/default/include/: Basemap.mapcss  priorities_2_BG-top.prio.txt
data/styles/outdoors/include/: priorities_2_BG-top.prio.txt
dev_sandbox/: CMakeLists.txt  main.cpp  main.mm
drape/: support_manager.cpp  support_manager.hpp
drape/vulkan/: vulkan_context_factory.cpp
libs/drape/: CMakeLists.txt  gl_functions.cpp  gl_functions.hpp  gl_gpu_program.cpp  hw_texture.cpp  render_state.cpp  texture_manager.cpp  texture_manager.hpp
libs/drape/drape_tests/: gl_functions.cpp
libs/drape/vulkan/: vulkan_base_context.cpp
libs/drape_frontend/: apply_feature_functors.cpp  apply_feature_functors.hpp  area_shape.cpp  frontend_renderer.cpp  render_state_extension.cpp  rule_drawer.cpp  tile_background_renderer.cpp
libs/indexer/: feature.hpp  ftypes_matcher.cpp  ftypes_matcher.hpp
libs/map/: framework.cpp  framework.hpp
libs/shaders/: program_params.hpp
libs/storage/: country_info_getter.cpp
